--- a/templates/convo_row_alt.html
+++ b/templates/convo_row_alt.html
@@ -2,7 +2,7 @@
 <div id="post-{{.ID}}" class="rowitem passive deletable_block editable_parent comment {{.ClassName}}">
 	<div class="topRow">
 		<div class="userbit">
-			<img src="{{.User.MicroAvatar}}" alt="Avatar" title="{{.User.Name}}'s Avatar" aria-hidden="true" />
+			<img src="{{.User.MicroAvatar}}" alt="Avatar" title="{{.User.Name}}'s Avatar" aria-hidden="true">
 			<span class="nameAndTitle">
 				<a href="{{.User.Link}}" class="real_username username">{{.User.Name}}</a>
 				{{if .User.Tag}}<a class="username hide_on_mobile user_tag" style="float:right;">{{.User.Tag}}</a>{{end}}
