--- a/templates/profile_comments_row_alt.html
+++ b/templates/profile_comments_row_alt.html
@@ -2,7 +2,7 @@
 <div id="post-{{.ID}}" class="rowitem passive deletable_block editable_parent comment {{.ClassName}}">
 	<div class="topRow">
 		<div class="userbit">
-			<img src="{{.MicroAvatar}}" alt="Avatar" title="{{.CreatedByName}}'s Avatar" aria-hidden="true" />
+			<img src="{{.MicroAvatar}}"alt="Avatar"title="{{.CreatedByName}}'s Avatar"aria-hidden="true">
 			<span class="nameAndTitle">
 				<a href="{{.UserLink}}" class="real_username username">{{.CreatedByName}}</a>
 				{{if .Tag}}<a class="username hide_on_mobile user_tag" style="float:right;">{{.Tag}}</a>{{end}}
