--- a/templates/topic_alt_inner.html
+++ b/templates/topic_alt_inner.html
@@ -62,7 +62,7 @@
 			<div class="show_on_edit attach_edit_bay" type="topic" id="{{.Topic.ID}}">
 				{{range .Topic.Attachments}}
 				<div class="attach_item attach_item_item{{if .Image}} attach_image_holder{{end}}">
-					{{if .Image}}<img src="//{{$.Header.Site.URL}}/attachs/{{.Path}}?sid={{.SectionID}}&amp;stype=forums" height=24 width=24/>{{end}}
+					{{if .Image}}<img src="//{{$.Header.Site.URL}}/attachs/{{.Path}}?sid={{.SectionID}}&amp;stype=forums" height=24 width=24>{{end}}
 					<span class="attach_item_path" aid="{{.ID}}" fullPath="//{{$.Header.Site.URL}}/attachs/{{.Path}}">{{.Path}}</span>
 					<button class="attach_item_select">{{lang "topic.select_button_text"}}</button>
 					<button class="attach_item_copy">{{lang "topic.copy_button_text"}}</button>
@@ -70,7 +70,7 @@
 				{{end}}
 				<div class="attach_item attach_item_buttons">
 					{{if .CurrentUser.Perms.UploadFiles}}
-					<input name="upload_files" id="upload_files_op" multiple type="file" class="auto_hide" />
+					<input name="upload_files" id="upload_files_op" multiple type="file" class="auto_hide"/>
 					<label for="upload_files_op" class="formbutton add_file_button">{{lang "topic.upload_button_text"}}</label>{{end}}
 					<button class="attach_item_delete formbutton">{{lang "topic.delete_button_text"}}</button>
 				</div>
