--- a/templates/guilds_create_guild.html
+++ b/templates/guilds_create_guild.html
@@ -8,11 +8,11 @@
 	<form action="/guild/create/submit/" method="post">
 		<div class="formrow">
 			<div class="formitem formlabel"><a>Guild Name</a></div>
-			<div class="formitem"><input name="group_name" type="text" placeholder="Group Name" /></div>
+			<div class="formitem"><input name="group_name" type="text" placeholder="Group Name"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>Description</a></div>
-			<div class="formitem"><input name="group_desc" type="text" placeholder="Description" /></div>
+			<div class="formitem"><input name="group_desc" type="text" placeholder="Description"></div>
 		</div>
 		<div class="formrow">
 				<div class="formitem formlabel"><a>Visibility</a></div>
