--- a/templates/ip_search.html
+++ b/templates/ip_search.html
@@ -8,12 +8,12 @@
 	<form action="/users/ips/" method="get" id="ip-search-form"></form>
 	<div class="rowblock ip_search_block">
 		<div class="rowitem passive">
-			<input form="ip-search-form" name="ip" class="ip_search_input" type="search" placeholder="🔍︎"{{if .IP}} value="{{.IP}}"{{end}}/>
-			<input form="ip-search-form" class="ip_search_search" type="submit" value="{{lang "ip_search_search_button"}}"/>
+			<input form="ip-search-form" name="ip" class="ip_search_input" type="search" placeholder="🔍︎"{{if .IP}} value="{{.IP}}"{{end}}>
+			<input form="ip-search-form" class="ip_search_search" type="submit" value="{{lang "ip_search_search_button"}}">
 		</div>
 	</div>
 	{{if .IP}}<div class="rowblock rowlist bgavatars micro_grid{{if .ItemList}} has_items{{end}}">
-		{{range .ItemList}}<div class="rowitem" style="background-image:url('{{.Avatar}}');">
+		{{range .ItemList}}<div class="rowitem"style="background-image:url('{{.Avatar}}');">
 			<img src="{{.Avatar}}"class="bgsub"alt="Avatar"aria-hidden="true">
 			<a class="rowTitle" href="{{.Link}}">{{.Name}}</a>
 		</div>
