--- a/templates/panel_analytics_performance.html
+++ b/templates/panel_analytics_performance.html
@@ -6,7 +6,7 @@
 			<option value="1"{{if eq .PerfType 1}} selected{{end}}>{{lang "panel_stats_perf_high"}}</option>
 			<option value="2"{{if eq .PerfType 2}} selected{{end}}>{{lang "panel_stats_perf_avg"}}</option>
 		</select>
-		<noscript><input form="timeRangeForm" type="submit" /></noscript>
+		<noscript><input form="timeRangeForm" type="submit"></noscript>
 		{{template "panel_analytics_time_range_month.html" . }}
 	</div>
 </div>
