--- a/templates/panel_analytics_time_range_month.html
+++ b/templates/panel_analytics_time_range_month.html
@@ -6,4 +6,4 @@
 	<option value="twelve-hours"{{if eq .TimeRange "twelve-hours"}} selected{{end}}>{{lang "panel_stats_time_range_twelve_hours"}}</option>
 	<option value="six-hours"{{if eq .TimeRange "six-hours"}} selected{{end}}>{{lang "panel_stats_time_range_six_hours"}}</option>
 </select>
-<noscript><input form="timeRangeForm" type="submit" /></noscript>
+<noscript><input form="timeRangeForm" type="submit"></noscript>
