--- a/templates/panel_pages.html
+++ b/templates/panel_pages.html
@@ -24,11 +24,11 @@
 	<form action="/panel/pages/create/submit/?s={{.CurrentUser.Session}}" method="post">
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_pages_create_name"}}</a></div>
-			<div class="formitem"><input name="name" type="text" placeholder="{{lang "panel_pages_create_name_placeholder"}}" /></div>
+			<div class="formitem"><input name="name" type="text" placeholder="{{lang "panel_pages_create_name_placeholder"}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_pages_create_title"}}</a></div>
-			<div class="formitem"><input name="title" type="text" placeholder="{{lang "panel_pages_create_title_placeholder"}}" /></div>
+			<div class="formitem"><input name="title" type="text" placeholder="{{lang "panel_pages_create_title_placeholder"}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem">
