--- a/templates/panel_pages_edit.html
+++ b/templates/panel_pages_edit.html
@@ -5,11 +5,11 @@
 	<div id="panel_page_edit_item" class="colstack_item the_form">
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_pages_name"}}</a></div>
-			<div class="formitem"><input name="name" type="text" value="{{.Page.Name}}" /></div>
+			<div class="formitem"><input name="name" type="text" value="{{.Page.Name}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_pages_title"}}</a></div>
-			<div class="formitem"><input name="title" type="text" value="{{.Page.Title}}" /></div>
+			<div class="formitem"><input name="title" type="text" value="{{.Page.Title}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem">
