--- a/templates/panel_themes_menus_item_edit.html
+++ b/templates/panel_themes_menus_item_edit.html
@@ -8,15 +8,15 @@
 		{{/** TODO: Let an admin move a menu item from one menu to another? **/}}
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_name"}}</a></div>
-			<div class="formitem"><input name="item-name" type="text" value="{{.Item.Name}}" /></div>
+			<div class="formitem"><input name="item-name" type="text" value="{{.Item.Name}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_htmlid"}}</a></div>
-			<div class="formitem"><input name="item-htmlid" type="text" value="{{.Item.HTMLID}}" /></div>
+			<div class="formitem"><input name="item-htmlid" type="text" value="{{.Item.HTMLID}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_cssclass"}}</a></div>
-			<div class="formitem"><input name="item-cssclass" type="text" value="{{.Item.CSSClass}}" /></div>
+			<div class="formitem"><input name="item-cssclass" type="text" value="{{.Item.CSSClass}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_position"}}</a></div>
@@ -29,19 +29,19 @@
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_path"}}</a></div>
-			<div class="formitem"><input name="item-path" type="text" value="{{.Item.Path}}" /></div>
+			<div class="formitem"><input name="item-path" type="text" value="{{.Item.Path}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_aria"}}</a></div>
-			<div class="formitem"><input name="item-aria" type="text" value="{{.Item.Aria}}" /></div>
+			<div class="formitem"><input name="item-aria" type="text" value="{{.Item.Aria}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_tooltip"}}</a></div>
-			<div class="formitem"><input name="item-tooltip" type="text" value="{{.Item.Tooltip}}" /></div>
+			<div class="formitem"><input name="item-tooltip" type="text" value="{{.Item.Tooltip}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_tmplname"}}</a></div>
-			<div class="formitem"><input name="item-tmplname" type="text" value="{{.Item.TmplName}}" /></div>
+			<div class="formitem"><input name="item-tmplname" type="text" value="{{.Item.TmplName}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_permissions"}}</a></div>
