--- a/templates/panel_themes_widgets_widget.html
+++ b/templates/panel_themes_widgets_widget.html
@@ -22,14 +22,14 @@
 <div class="formrow">
 	<div class="formitem formlabel"><a>{{lang "panel_themes_widgets_location"}}</a></div>
 	<div class="formitem">
-		<input name="wlocation" value="{{.Location}}" />
+		<input name="wlocation" value="{{.Location}}">
 	</div>
 </div>
 <div class="wtypes wtype_{{.Type}}">
 <div class="formrow w_simple w_about">
 	<div class="formitem formlabel"><a>{{lang "panel_themes_widgets_name"}}</a></div>
 	<div class="formitem">
-		<input name="wname" value="{{index .Data "Name"}}" />
+		<input name="wname" value="{{index .Data "Name"}}">
 	</div>
 </div>
 <div class="formrow w_simple w_about">
