--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -7,7 +7,7 @@
 		<form action="/accounts/password-reset/submit/" method="post">
 			<div class="formrow login_name_row">
 				<div class="formitem formlabel"><a id="login_name_label">{{lang "password_reset_username"}}</a></div>
-				<div class="formitem"><input name="username" type="text" aria-labelledby="login_name_label" required /></div>
+				<div class="formitem"><input name="username" type="text" aria-labelledby="login_name_label" required></div>
 			</div>
 			<div class="formrow login_button_row form_button_row">
 				<div class="formitem"><button name="login-button" class="formbutton">{{lang "password_reset_button"}}</button></div>
