--- a/templates/password_reset_token.html
+++ b/templates/password_reset_token.html
@@ -5,20 +5,20 @@
 	</div>
 	<div class="rowblock the_form">
 		<form action="/accounts/password-reset/token/submit/" method="post">
-			<input name="uid" value="{{.UID}}" type="hidden" />
-			<input name="token" value="{{.Token}}" type="hidden" />
+			<input name="uid" value="{{.UID}}" type="hidden">
+			<input name="token" value="{{.Token}}" type="hidden">
 			<div class="formrow">
 				<div class="formitem formlabel"><a id="password_label">{{lang "password_reset_token_password"}}</a></div>
-				<div class="formitem"><input name="password" type="password" autocomplete="new-password" placeholder="*****" aria-labelledby="password_label" required /></div>
+				<div class="formitem"><input name="password" type="password" autocomplete="new-password" placeholder="*****" aria-labelledby="password_label" required></div>
 			</div>
 			<div class="formrow">
 				<div class="formitem formlabel"><a id="confirm_password_label">{{lang "password_reset_token_confirm_password"}}</a></div>
-				<div class="formitem"><input name="confirm_password" type="password" placeholder="*****" autocomplete="new-password" aria-labelledby="confirm_password_label" required /></div>
+				<div class="formitem"><input name="confirm_password" type="password" placeholder="*****" autocomplete="new-password" aria-labelledby="confirm_password_label" required></div>
 			</div>
 			{{if .MFA}}
 			<div class="formrow mfa_token_row">
 				<div class="formitem formlabel"><a id="mfa_token_label">{{lang "password_reset_mfa_token"}}</a></div>
-				<div class="formitem"><input name="mfa_token" type="text" autocomplete="off" placeholder="*****" aria-labelledby="mfa_token_label" required /></div>
+				<div class="formitem"><input name="mfa_token" type="text" autocomplete="off" placeholder="*****" aria-labelledby="mfa_token_label" required></div>
 			</div>
 			{{end}}
 			<div class="formrow login_button_row form_button_row">
