--- a/templates/topics.html
+++ b/templates/topics.html
@@ -38,7 +38,7 @@
 {{/** TODO: Add ARIA attributes for this **/}}
 <div id="mod_topic_mover" class="modal_pane auto_hide">
 	<form action="/topic/move/submit/?s={{.CurrentUser.Session}}" method="post">
-		<input id="mover_fid"name="fid" value=0 type="hidden"/>
+		<input id="mover_fid"name="fid"value=0 type="hidden">
 		<div class="pane_header">
 			<h3>{{lang "topic_list.move_head"}}</h3>
 		</div>
