--- a/templates/account_own_edit_mfa_setup.html
+++ b/templates/account_own_edit_mfa_setup.html
@@ -7,14 +7,14 @@
 		</div>
 		<div class="colstack_item the_form">
 			<form action="/user/edit/mfa/setup/submit/?s={{.CurrentUser.Session}}" method="post">
-				<input name="code" value="{{.Something}}" type="hidden"/>
+				<input name="code" value="{{.Something}}" type="hidden">
 				<div class="formrow real_first_child">
 					<div class="formitem formlabel"><a>{{lang "account_mfa_setup_explanation"}}</a></div>
 					<div class="formitem formlabel">{{.Something}}</div>
 				</div>
 				<div class="formrow">
 					<div class="formitem formlabel"><a>{{lang "account_mfa_setup_verify"}}</a></div>
-					<div class="formitem"><input name="otp" type="text" autocomplete="off" required /></div> {{/** TODO: Make this a password? **/}}
+					<div class="formitem"><input name="otp" type="text" autocomplete="off" required></div> {{/** TODO: Make this a password? **/}}
 				</div>
 				<div class="formrow">
 					<div class="formitem"><button name="account-button" class="formbutton form_middle_button">{{lang "account_mfa_setup_button"}}</button></div>
