--- a/templates/account_own_edit_password.html
+++ b/templates/account_own_edit_password.html
@@ -9,15 +9,15 @@
 			<form action="/user/edit/password/submit/?s={{.CurrentUser.Session}}" method="post">
 				<div class="formrow real_first_child">
 					<div class="formitem formlabel"><a>{{lang "account_password_current_password"}}</a></div>
-					<div class="formitem"><input name="current-password" type="password" placeholder="*****" autocomplete="current-password" required /></div>
+					<div class="formitem"><input name="current-password" type="password" placeholder="*****" autocomplete="current-password" required></div>
 				</div>
 				<div class="formrow">
 					<div class="formitem formlabel"><a>{{lang "account_password_new_password"}}</a></div>
-					<div class="formitem"><input name="new-password" type="password" placeholder="*****" autocomplete="new-password" required /></div>
+					<div class="formitem"><input name="new-password" type="password" placeholder="*****" autocomplete="new-password" required></div>
 				</div>
 				<div class="formrow">
 					<div class="formitem formlabel"><a>{{lang "account_password_confirm_password"}}</a></div>
-					<div class="formitem"><input name="confirm-password" type="password" placeholder="*****" autocomplete="new-password" required /></div>
+					<div class="formitem"><input name="confirm-password" type="password" placeholder="*****" autocomplete="new-password" required></div>
 				</div>
 				<div class="formrow">
 					<div class="formitem"><button name="account-button" class="formbutton form_middle_button">{{lang "account_password_update_button"}}</button></div>
