--- a/templates/login_mfa_verify.html
+++ b/templates/login_mfa_verify.html
@@ -10,7 +10,7 @@
 			</div>
 			<div class="formrow login_mfa_token_row">
 				<div class="formitem formlabel"><a id="login_mfa_verify_label">{{lang "login_mfa_token"}}</a></div>
-				<div class="formitem"><input name="mfa_token" type="text" autocomplete="off" placeholder="*****" aria-labelledby="login_mfa_verify_label" required /></div>
+				<div class="formitem"><input name="mfa_token" type="text" autocomplete="off" placeholder="*****" aria-labelledby="login_mfa_verify_label" required></div>
 			</div>
 			<div class="formrow login_button_row form_button_row">
 				<div class="formitem"><button name="login-button" class="formbutton">{{lang "login_mfa_verify_button"}}</button></div>
