--- a/templates/panel_group_edit_promotions.html
+++ b/templates/panel_group_edit_promotions.html
@@ -57,18 +57,18 @@
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_group_promotions_level"}}</a></div>
-			<div class="formitem"><input name="level" type="number" value="0"/></div>
+			<div class="formitem"><input name="level" type="number" value="0"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_group_promotions_posts"}}</a></div>
-			<div class="formitem"><input name="posts" type="number" value="0"/></div>
+			<div class="formitem"><input name="posts" type="number" value="0"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_group_promotion_registered_for"}}</a></div>
 			<div class="formitem">
-				<input name="registered_months" type="number" value="0"/>{{lang "panel_group_promotion_registered_months_suffix"}}<br>
-				<input name="registered_days" type="number" value="0"/>{{lang "panel_group_promotion_registered_days_suffix"}}<br>
-				<input name="registered_hours" type="number" value="0"/>{{lang "panel_group_promotion_registered_hours_suffix"}}
+				<input name="registered_months" type="number" value="0">{{lang "panel_group_promotion_registered_months_suffix"}}<br>
+				<input name="registered_days" type="number" value="0">{{lang "panel_group_promotion_registered_days_suffix"}}<br>
+				<input name="registered_hours" type="number" value="0">{{lang "panel_group_promotion_registered_hours_suffix"}}
 			</div>
 		</div>
 		<div class="formrow form_button_row">
