--- a/templates/panel_groups.html
+++ b/templates/panel_groups.html
@@ -24,7 +24,7 @@
 	<form action="/panel/groups/create/?s={{.CurrentUser.Session}}" method="post">
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_groups_create_name"}}</a></div>
-			<div class="formitem"><input name="name" type="text" placeholder="{{lang "panel_groups_create_name_placeholder"}}" /></div>
+			<div class="formitem"><input name="name" type="text" placeholder="{{lang "panel_groups_create_name_placeholder"}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_groups_create_type"}}</a></div>
@@ -39,7 +39,7 @@
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_groups_create_tag"}}</a></div>
-			<div class="formitem"><input name="tag" type="text" /></div>
+			<div class="formitem"><input name="tag" type="text"></div>
 		</div>
 		<div class="formrow form_button_row">
 			<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel_groups_create_button"}}</button></div>
