--- a/templates/panel_themes_menus_items.html
+++ b/templates/panel_themes_menus_items.html
@@ -22,20 +22,20 @@
 	<div class="rowitem"><h1>{{lang "panel_themes_menus_create_head"}}</h1></div>
 </div>
 <form action="/panel/themes/menus/item/create/submit/?s={{.CurrentUser.Session}}" method="post">
-	<input name="mid" value="{{.MenuID}}" type="hidden" />
+	<input name="mid" value="{{.MenuID}}" type="hidden">
 	<div id="panel_themes_menu_item_create" class="colstack_item the_form">
 		{{/** TODO: Let an admin move a menu item from one menu to another? **/}}
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_name"}}</a></div>
-			<div class="formitem"><input name="item-name" type="text" placeholder="{{lang "panel_themes_menus_name_placeholder"}}" /></div>
+			<div class="formitem"><input name="item-name" type="text" placeholder="{{lang "panel_themes_menus_name_placeholder"}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_htmlid"}}</a></div>
-			<div class="formitem"><input name="item-htmlid" type="text" /></div>
+			<div class="formitem"><input name="item-htmlid" type="text"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_cssclass"}}</a></div>
-			<div class="formitem"><input name="item-cssclass" type="text" /></div>
+			<div class="formitem"><input name="item-cssclass" type="text"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_position"}}</a></div>
@@ -48,15 +48,15 @@
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_path"}}</a></div>
-			<div class="formitem"><input name="item-path" type="text" value="/" /></div>
+			<div class="formitem"><input name="item-path" type="text" value="/"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_aria"}}</a></div>
-			<div class="formitem"><input name="item-aria" type="text" placeholder="{{lang "panel_themes_menus_aria_placeholder"}}" /></div>
+			<div class="formitem"><input name="item-aria" type="text" placeholder="{{lang "panel_themes_menus_aria_placeholder"}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_tooltip"}}</a></div>
-			<div class="formitem"><input name="item-tooltip" type="text" placeholder="{{lang "panel_themes_menus_tooltip_placeholder"}}" /></div>
+			<div class="formitem"><input name="item-tooltip" type="text" placeholder="{{lang "panel_themes_menus_tooltip_placeholder"}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_themes_menus_permissions"}}</a></div>
