--- a/templates/panel_user_edit.html
+++ b/templates/panel_user_edit.html
@@ -8,9 +8,9 @@
 	<div class="formrow">
 		<div class="formitem formlabel"><a>{{lang "panel_user_avatar"}}</a></div>
 		<div class="formitem avataritem">
-			{{if .User.RawAvatar}}<img src="{{.User.Avatar}}" height=56 width=56>{{end}}
+			{{if .User.RawAvatar}}<img src="{{.User.Avatar}}"height=56 width=56>{{end}}
 			<div class="avatarbuttons">
-				<input form="avatar_form" id="select_avatar" name="avatar_file" type="file" required class="auto_hide"/>
+				<input form="avatar_form" id="select_avatar" name="avatar_file" type="file" required class="auto_hide">
 				<label for="select_avatar" class="formbutton">{{lang "panel_user_avatar_select"}}</label>
 				<button form="avatar_form" name="avatar_action" value=0>{{lang "panel_user_avatar_upload"}}</button>
 				{{if .User.RawAvatar}}<button form="remove_avatar_form" name="avatar_action" value=1>{{lang "panel_user_avatar_remove"}}</button>{{end}}
@@ -19,17 +19,17 @@
 	</div>
 	<div class="formrow">
 		<div class="formitem formlabel"><a>{{lang "panel_user_name"}}</a></div>
-		<div class="formitem"><input form="user_form" name="name" type="text" value="{{.User.Name}}" placeholder="{{lang "panel_user_name_placeholder"}}" autocomplete="off"/></div>
+		<div class="formitem"><input form="user_form" name="name" type="text" value="{{.User.Name}}" placeholder="{{lang "panel_user_name_placeholder"}}" autocomplete="off"></div>
 	</div>
 	{{if .CurrentUser.Perms.EditUserPassword}}<div class="formrow">
 		<div class="formitem formlabel"><a>{{lang "panel_user_password"}}</a></div>
-		<div class="formitem"><input form="user_form" name="password" type="password" placeholder="*****" autocomplete="off"/></div>
+		<div class="formitem"><input form="user_form" name="password" type="password" placeholder="*****" autocomplete="off"></div>
 	</div>{{end}}
 	{{if .CurrentUser.Perms.EditUserEmail}}<div class="formrow">
 		<div class="formitem formlabel"><a>{{lang "panel_user_email"}}</a></div>
 		<div class="formitem">
-			{{if .ShowEmail}}<input form="user_form" name="show-email" value=1 type="hidden" />
-			<input form="user_form" name="email" type="email" value="{{.User.Email}}" placeholder="example@localhost"/>{{else}}<input form="user_form" name="email" value="-1" type="hidden"/><a href="/panel/users/edit/{{.User.ID}}?show-email=1"><button>{{lang "panel_user_show_email"}}</button></a>{{end}}
+			{{if .ShowEmail}}<input form="user_form" name="show-email" value=1 type="hidden">
+			<input form="user_form" name="email" type="email" value="{{.User.Email}}" placeholder="example@localhost">{{else}}<input form="user_form" name="email" value="-1" type="hidden"><a href="/panel/users/edit/{{.User.ID}}?show-email=1"><button>{{lang "panel_user_show_email"}}</button></a>{{end}}
 		</div>
 	</div>{{end}}
 	{{if .CurrentUser.Perms.EditUserGroup}}
