--- a/templates/panel_word_filters.html
+++ b/templates/panel_word_filters.html
@@ -27,11 +27,11 @@
 	<form action="/panel/settings/word-filters/create/?s={{.CurrentUser.Session}}" method="post">
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_word_filters_create_find"}}</a></div>
-			<div class="formitem"><input name="find" type="text" placeholder="{{lang "panel_word_filters_create_find_placeholder"}}" /></div>
+			<div class="formitem"><input name="find" type="text" placeholder="{{lang "panel_word_filters_create_find_placeholder"}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_word_filters_create_replacement"}}</a></div>
-			<div class="formitem"><input name="replace" type="text" placeholder="{{lang "panel_word_filters_create_replacement_placeholder"}}" /></div>
+			<div class="formitem"><input name="replace" type="text" placeholder="{{lang "panel_word_filters_create_replacement_placeholder"}}"></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">{{lang "panel_word_filters_create_button"}}</button></div>
