--- a/templates/register.html
+++ b/templates/register.html
@@ -7,19 +7,19 @@
 		<form action="/accounts/create/submit/" method="post">
 			<div class="formrow">
 				<div class="formitem formlabel"><a id="name_label">{{lang "register_account_name"}}</a></div>
-				<div class="formitem"><input name="name" type="text" placeholder="{{lang "register_account_name"}}" aria-labelledby="name_label" required /></div>
+				<div class="formitem"><input name="name" type="text" placeholder="{{lang "register_account_name"}}" aria-labelledby="name_label" required></div>
 			</div>
 			<div class="formrow">
 				<div class="formitem formlabel"><a id="email_label">{{if not .Something}}{{lang "register_account_email"}}{{else}}{{lang "register_account_email_optional"}}{{end}}</a></div>
-				<div class="formitem"><input name="email" type="email" placeholder="joe.doe@example.com" aria-labelledby="email_label"{{if not .Something}} required{{end}} /></div>
+				<div class="formitem"><input name="email" type="email" placeholder="joe.doe@example.com" aria-labelledby="email_label"{{if not .Something}} required{{end}}></div>
 			</div>
 			<div class="formrow">
 				<div class="formitem formlabel"><a id="password_label">{{lang "register_account_password"}}</a></div>
-				<div class="formitem"><input name="password" type="password" autocomplete="new-password" placeholder="*****" aria-labelledby="password_label" required /></div>
+				<div class="formitem"><input name="password" type="password" autocomplete="new-password" placeholder="*****" aria-labelledby="password_label" required></div>
 			</div>
 			<div class="formrow">
 				<div class="formitem formlabel"><a id="confirm_password_label">{{lang "register_account_confirm_password"}}</a></div>
-				<div class="formitem"><input name="confirm_password" type="password" placeholder="*****" autocomplete="new-password" aria-labelledby="confirm_password_label" required /></div>
+				<div class="formitem"><input name="confirm_password" type="password" placeholder="*****" autocomplete="new-password" aria-labelledby="confirm_password_label" required></div>
 			</div>
 			<div class="formrow">{{/** This is not a TOS, that text is there to fool the spambots **/}}
 				<div class="formitem formlabel"><a id="accept_tos_label">{{lang "register_account_anti_spam"}}</a></div>
@@ -31,7 +31,7 @@
 			<div class="formrow register_button_row form_button_row">
 				<div class="formitem"><button name="register-button" class="formbutton">{{lang "register_submit_button"}}</button></div>
 			</div>
-			<input id="golden-watch" name="golden-watch" value="$500" type="hidden" />
+			<input id="golden-watch" name="golden-watch" value="$500" type="hidden">
 		</form>
 	</div>
 </main>
