--- a/templates/topic_alt_posts.html
+++ b/templates/topic_alt_posts.html
@@ -20,7 +20,7 @@
 			{{end}}
 			<div class="attach_item attach_item_buttons">
 				{{if $.CurrentUser.Perms.UploadFiles}}
-				<input name="upload_files" class="upload_files_post auto_hide" id="upload_files_post_{{.ID}}" multiple type="file"/>
+				<input name="upload_files" class="upload_files_post auto_hide" id="upload_files_post_{{.ID}}" multiple type="file">
 				<label for="upload_files_post_{{.ID}}" class="formbutton add_file_button">{{lang "topic.upload_button_text"}}</label>{{end}}
 				<button class="attach_item_delete formbutton">{{lang "topic.delete_button_text"}}</button>
 			</div>
