optimise attach exts optimise PrepResources

--- a/templates/header.html
+++ b/templates/header.html
@@ -13,16 +13,16 @@
 		<script src="/s/jquery-3.1.1.min.js"></script>
 		{{range .Header.Scripts}}
 		<script src="/s/{{.}}"></script>{{end}}
-		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
-		{{if .Header.MetaDesc}}<meta name="description"content="{{.Header.MetaDesc}}"/>{{end}}
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+		{{if .Header.MetaDesc}}<meta name="description"content="{{.Header.MetaDesc}}">{{end}}
 		{{/** TODO: Have page / forum / topic level tags and descriptions below as-well **/}}
-		<meta property="og:type"content="website"/>
+		<meta property="og:type"content="website">
 		<meta property="og:site_name"content="{{.Header.Site.Name}}">
 		<meta property="og:title"content="{{.Title}} | {{.Header.Site.Name}}">
-		<meta name="twitter:title"content="{{.Title}} | {{.Header.Site.Name}}"/>
-		{{if .OGDesc}}<meta property="og:description"content="{{.OGDesc}}"/>
-		<meta property="twitter:description"content="{{.OGDesc}}"/>{{end}}
-		{{if .GoogSiteVerify}}<meta name="google-site-verification"content="{{.GoogSiteVerify}}"/>{{end}}
+		<meta name="twitter:title"content="{{.Title}} | {{.Header.Site.Name}}">
+		{{if .OGDesc}}<meta property="og:description"content="{{.OGDesc}}">
+		<meta property="twitter:description"content="{{.OGDesc}}">{{end}}
+		{{if .GoogSiteVerify}}<meta name="google-site-verification"content="{{.GoogSiteVerify}}">{{end}}
 		<link rel="search" type="application/opensearchdescription+xml" title="{{.Header.Site.Name}}" href="/opensearch.xml">
 	</head>
 	<body>
