add mattermost ua save bytes in req dump
phrases:

rename panel_group_promotion_registered_for to panel_group_promotion_reg_for
rename panel_group_promotion_registered_months_suffix to panel_group_promotion_reg_months_suffix
rename panel_group_promotion_registered_days_suffix to panel_group_promotion_reg_days_suffix
rename panel_group_promotion_registered_hours_suffix to panel_group_promotion_reg_hours_suffix

--- a/templates/panel_group_edit_promotions.html
+++ b/templates/panel_group_edit_promotions.html
@@ -64,11 +64,11 @@
 			<div class="formitem"><input name="posts" type="number" value="0"></div>
 		</div>
 		<div class="formrow">
-			<div class="formitem formlabel"><a>{{lang "panel_group_promotion_registered_for"}}</a></div>
+			<div class="formitem formlabel"><a>{{lang "panel_group_promotion_reg_for"}}</a></div>
 			<div class="formitem">
-				<input name="registered_months" type="number" value="0">{{lang "panel_group_promotion_registered_months_suffix"}}<br>
-				<input name="registered_days" type="number" value="0">{{lang "panel_group_promotion_registered_days_suffix"}}<br>
-				<input name="registered_hours" type="number" value="0">{{lang "panel_group_promotion_registered_hours_suffix"}}
+				<input name="reg_months" type="number" value="0">{{lang "panel_group_promotion_reg_months_suffix"}}<br>
+				<input name="reg_days" type="number" value="0">{{lang "panel_group_promotion_reg_days_suffix"}}<br>
+				<input name="reg_hours" type="number" value="0">{{lang "panel_group_promotion_reg_hours_suffix"}}
 			</div>
 		</div>
 		<div class="formrow form_button_row">
